# KadeIDE

./: .gitignore  README.md  build-optimized.sh  index.html  package.json  tsconfig.json  vite.config.ts
scripts/: PRD.txt  task-complexity-report.json
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: app.rs  error.rs  lib.rs  utils.rs
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  tasks.json
